feat: 优化 logo、标题的抖动问题

--- a/frontend/packages/design/global.css
+++ b/frontend/packages/design/global.css
@@ -64,7 +64,9 @@ a {
   }
 
   .text-ellipsis {
-    @apply overflow-hidden whitespace-nowrap text-ellipsis;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .hover-card {
