feat: 拆分部分组件

--- a/frontend/packages/design/global.css
+++ b/frontend/packages/design/global.css
@@ -121,3 +121,9 @@ html.invert-mode {
 html.grayscale-mode {
   @apply grayscale;
 }
+
+html.theme-switching *,
+html.theme-switching *::before,
+html.theme-switching *::after {
+  transition: none !important;
+}
